changes in template

--- a/templateTFM.tex
+++ b/templateTFM.tex
@@ -110,9 +110,9 @@
 			
 			\textsc{\Large Escuela Politécnica}\\[0.5cm]
 			\textsc{\Large Máster Universitario en Ingeniería Informática}\\[3cm]
-			\textsc{\Large Trabajo Fin de Máster}\\[0.5cm]
-			{ \large \bfseries Desarrollo de una librería para el análisis de datos vectoriales 2D}\\[0.8cm]
-			{ \huge \bfseries  pyCircularStat}\\[1.4cm]
+			\textsc{\Large Trabajo Fin de Grado/Máster}\\[0.5cm]
+			{ \large \bfseries Título trabajo fin de grado/máster}\\[4.0cm]
+			%{ \huge \bfseries  pyCircularStat}\\[1.4cm]
 			
 			\vfill
 			
@@ -155,9 +155,9 @@
 			
 			\textsc{\Large Escuela Politécnica}\\[0.5cm]
 			\textsc{\Large Máster Universitario en Ingeniería Informática}\\[2.5cm]
-			\textsc{\Large Trabajo Fin de Máster}\\[0.5cm]
-			{ \large \bfseries Desarrollo de una librería para el análisis de datos vectoriales 2D}\\[0.8cm]
-			{ \huge \bfseries  pyCircularStat}\\[4cm]
+			\textsc{\Large Trabajo Fin de Grado/Máster}\\[0.5cm]
+			{ \large \bfseries Título trabajo fin de grado/máster}\\[4.0cm]
+			%{ \huge \bfseries  pyCircularStat}\\[1.4cm]
 			
 			{ \large \bfseries Autor: }\\[0.5cm]
 			{ \large \bfseries Tutor: }\\[0.5cm]
