fix errors in spanish language

--- a/templateTFM.tex
+++ b/templateTFM.tex
@@ -1,6 +1,7 @@
 %\documentclass[a4paper]{article}
 \documentclass[12pt,a4paper,twoside]{article} % tamaño 12
-\usepackage[spanish]{babel}
+%\usepackage[spanish]{babel}
+\usepackage[spanish, es-tabla]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage[table]{xcolor} % para poner color en las tablas
 \usepackage{tikz} % grafos
@@ -175,17 +176,18 @@
 \newpage
 
 
-
 \begin{abstract}
-EL RESUMEN EN INGLÉS
-\begin{center}
- \textbf{Resumen}\\
- \justify
-EL RESUMEN EN ESPAÑOL
-\end{center}
-\hrulefill
+	EL RESUMEN EN ESPAÑOL
+	\begin{center}
+		\textbf{Abstract}\\
+		\justify
+		EL RESUMEN EN INGLÉS
+	\end{center}
+	\hrulefill
 \end{abstract}
-
+\pagebreak
+\pagenumbering{roman}
+\setcounter{page}{1}
 \tableofcontents
 %\pagebreak
 \newpage
@@ -233,27 +235,31 @@ EL RESUMEN EN ESPAÑOL
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+\pagenumbering{arabic}
+\setcounter{page}{1}
 
 \section{INTRODUCCIÓN}
-Escribir aqui la introducción
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 \section{OBJETIVOS}
-Escribir aqui los objetivos
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 \section{ESTADO DEL ARTE}
-Escribir aqui estado del arte
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 \section{METODOLOGÍA}
-Escribir aqui la metodología utilizada
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 \section{IMPLEMENTACIÓN Y DESARROLLO}
-Escribir aqui la implementación
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 \section{RESULTADOS}
-Escribir aqui los resultados
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 \section{CONCLUSIONES Y TRABAJO FUTURO}
-Escribir aqui las conclusiones y trabajo futuro
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% AL FINAL %%%%%%%%%%%%%%
