Modificación de nombres.

--- a/thesis-TrabajoFinDeGrado/templateTFG.tex
+++ b/thesis-TrabajoFinDeGrado/templateTFG.tex
@@ -126,10 +126,10 @@
 			% Upper part of the page
 			\textsc{\LARGE UNIVERSIDAD DE EXTREMADURA}\\[4cm]
 			
-			\textsc{\Large Escuela Politécnica}\\[0.5cm]
-			\textsc{\Large Grado en Ingeniería Informática en Ingeniería Software}\\[3cm]
+			\textsc{\Large Facultad de Estudios}\\[0.5cm]
+			\textsc{\Large Título de Estudios}\\[3cm]
 			\textsc{\Large Trabajo Fin de Grado}\\[0.5cm]
-			{ \large \bfseries Transformación Digital en Instituciones Públicas}\\[4.0cm]
+			{ \large \bfseries Título del Trabajo Fin de Grado}\\[4.0cm]
 			\vfill
 			% Bottom of the page
 			{\large}
@@ -167,12 +167,12 @@
 			% Upper part of the page
 			\textsc{\LARGE UNIVERSIDAD DE EXTREMADURA}\\[3cm]
 			
-			\textsc{\Large Escuela Politécnica}\\[0.5cm]
-			\textsc{\Large Grado de Ingeniería Informática en Ingeniería Software}\\[2.5cm]
+			\textsc{\Large Facultad de Estudios}\\[0.5cm]
+			\textsc{\Large Título de Estudios}\\[2.5cm]
 			\textsc{\Large Trabajo Fin de Grado}\\[0.5cm]
-			{ \large \bfseries Transformación Digital en Instituciones Públicas}\\[4.0cm]			
-			{ \large \bfseries Autor: Daniel Campos Olivares}\\[0.5cm]
-			{ \large \bfseries Tutor: Pablo García Rodríguez}\\[0.5cm]
+			{ \large \bfseries Título del Trabajo Fin de Grado}\\[4.0cm]			
+			{ \large \bfseries Autor: }\\[0.5cm]
+			{ \large \bfseries Tutor: }\\[0.5cm]
 			{ \large \bfseries Co-Tutor: }\\[0.5cm]
 			\vfill
 			% Bottom of the page
