--- a/thesis-TrabajoFinDeGrado/templateTFG.tex
+++ b/thesis-TrabajoFinDeGrado/templateTFG.tex
@@ -188,15 +188,17 @@
 \begin{abstract}
 
 % Aquí el resumen en español.
+EL RESUMEN EN ESPAÑOL
 	
-	\begin{center}
-		\textbf{Abstract}\\
-		\justify
-		
-% Aquí el resumen en inglés si el tutor lo requiere.		
-		
-	\end{center}
-	\hrulefill
+\begin{center}
+\textbf{Abstract}\\
+\justify
+% Aquí el resumen en inglés si el tutor lo requiere.
+EL RESUMEN EN INGLÉS
+
+
+\end{center}
+\hrulefill
 \end{abstract}
 \pagebreak
 \pagenumbering{roman}
@@ -245,34 +247,48 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-\section{INTRODUCCIÓN}\label{sec:introduccion}
+\section{INTRODUCCIÓN}
+\label{sec:introduccion}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 
-\section{OBJETIVOS}\label{sec:objetivos}
+\section{OBJETIVOS}
+\label{sec:objetivos}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 
-\section{ESTADO DEL ARTE}\label{sec:stateofart}
+\section{ESTADO DEL ARTE}
+\label{sec:stateofart}
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-\section{METODOLOGÍAS}\label{sec:metodologias}
+
+\section{METODOLOGÍA}
+\label{sec:metodologias}
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-\section{IMPLEMENTACIÓN Y DESARROLLO}\label{sec:implementacionydesarrollo}
+
+\section{IMPLEMENTACIÓN Y DESARROLLO}
+\label{sec:implementacionydesarrollo}
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-\section{RESULTADOS}\label{sec:resultados}
+
+\section{RESULTADOS}
+\label{sec:resultados}
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-\section{CONCLUSIONES Y TRABAJO FUTURO}\label{sec:conclusiones}
+
+\section{CONCLUSIONES Y TRABAJO FUTURO}
+\label{sec:conclusiones}
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 
