--- a/thesis-TrabajoFinDeGrado/templateTFG.tex
+++ b/thesis-TrabajoFinDeGrado/templateTFG.tex
@@ -286,6 +286,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor inci
 
 \addcontentsline{toc}{subsection}{Anexo I}
 \chapter{\textbf{Anexo I\\}}
+\lhead{Anexo I}
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\\
 
 \addcontentsline{toc}{subsection}{Insertar y referenciar una Imagen}
