Added example of use of tables

--- a/thesis-TrabajoFinDeGrado/templateTFG.tex
+++ b/thesis-TrabajoFinDeGrado/templateTFG.tex
@@ -313,10 +313,39 @@ Ejemplo Referenciar imagen \ref{fig:logoEpcc}
 \label{fig:logoEpcc}
 \end{figure}
 
+\pagebreak
+\addcontentsline{toc}{subsection}{Insertar y referenciar una Tabla}
+\chapter{\textbf{Insertar y referenciar una tabla\\}}
+Ejemplo referenciar tabla \ref{tab:tablaEj}
+
+Para más opciones \cite{tables} \par
+\begin{table}[H]
+\centering
+\begin{tabular}{|l|l|l|l|}
+\hline
+ Col1 & Col2 & Col3  & Col4 \\ \hline
+SOY &  UNA & TABLA & CON BORDES \\
+SOY &  UNA & TABLA & CON BORDES \\
+SOY &  UNA & TABLA & CON BORDES \\
+SOY &  UNA & TABLA & CON BORDES \\
+SOY &  UNA & TABLA & CON BORDES \\
+SOY &  UNA & TABLA & CON BORDES \\
+SOY &  UNA & TABLA & CON BORDES \\
+SOY &  UNA & TABLA & CON BORDES \\
+SOY &  UNA & TABLA & CON BORDES \\
+SOY &  UNA & TABLA & CON BORDES \\ \hline
+ & Y & MAS BORDES & \\
+\hline
+\end{tabular}
+\caption[table]{Distribución de jamones curados}
+\label{tab:tablaEj}
+\end{table} 
+
+
 \addcontentsline{toc}{subsection}{Citar bibliografía}
 \chapter{\textbf{Citar bibliografía\\}}
 
-Ejemplo Referenciar imagen \cite{haut2016cloud}
+Ejemplo citar \cite{haut2016cloud}
 
 \pagebreak
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
