Arreglado header paginas impares y fontsize abstract.

--- a/thesis-TrabajoFinDeGrado/templateTFG.tex
+++ b/thesis-TrabajoFinDeGrado/templateTFG.tex
@@ -76,7 +76,7 @@
 
 
 
-
+\lhead{\fancyplain{}{\rightmark }} % 1. sectionname
 \rhead{\begin{picture}(0,0) \put(0,0){\includegraphics[width=1cm]{pictures/logouex_transp.png}}
 \end{picture}}
 
@@ -186,6 +186,7 @@
 
 
 \begin{abstract}
+\normalsize
 	Aquí el abstract en español.
 \end{abstract}
 
@@ -194,6 +195,7 @@
 \selectlanguage{USenglish}
 \thispagestyle{empty}
 \begin{abstract}
+\normalsize
 	Aquí el abstract en inglés.
 \end{abstract}
 	
