--- a/thesis-TrabajoFinDeGrado/templateTFG.tex
+++ b/thesis-TrabajoFinDeGrado/templateTFG.tex
@@ -88,7 +88,7 @@
 \makeatletter
 
 % Añadida la profundida de secciones a 4, para poder crear una subsubsubsección con la definición \paragraph. Para esto se ha añadido el uso del paquete titlesec.
-
+\setlength{\headheight}{16pt}% ...at least 51.60004pt
 \setcounter{secnumdepth}{4}
 
 \titleformat{\paragraph}
