Change the page numbering to arabic and solve a small error in the home page

--- a/thesis-TrabajoFinDeGrado/templateTFG.tex
+++ b/thesis-TrabajoFinDeGrado/templateTFG.tex
@@ -124,14 +124,14 @@
 			
 			
 			% Upper part of the page
-			\textsc{\LARGE UNIVERSIDAD DE EXTREMADURA}\\[4cm]
+			\textsc{\LARGE UNIVERSIDAD DE EXTREMADURA}\\[1cm]
 			
-			\textsc{\Large Facultad de Estudios}\\[0.5cm]
-			\textsc{\Large Título de Estudios}\\[3cm]
-			\textsc{\Large Trabajo Fin de Grado}\\[0.5cm]
-			{ \large \bfseries Título del Trabajo Fin de Grado}\\[4.0cm]
-			\vfill
-			% Bottom of the page
+			\Large Escuela Politécnica\\[0.5cm]
+			\Large Titulación\\[1cm]
+			\Large Trabajo Fin de Grado\\[0.5cm]
+			{ \large \bfseries Título del trabajo}\\[4.0cm]
+			{ \large \centering Nombre del autor}\\
+			{ \large \centering Convocatoria, Año}\\
 			{\large}
 		\end{center}
 	\end{adjustwidth}
@@ -167,13 +167,15 @@
 			% Upper part of the page
 			\textsc{\LARGE UNIVERSIDAD DE EXTREMADURA}\\[3cm]
 			
-			\textsc{\Large Facultad de Estudios}\\[0.5cm]
-			\textsc{\Large Título de Estudios}\\[2.5cm]
-			\textsc{\Large Trabajo Fin de Grado}\\[0.5cm]
-			{ \large \bfseries Título del Trabajo Fin de Grado}\\[4.0cm]			
-			{ \large \bfseries Autor: }\\[0.5cm]
-			{ \large \bfseries Tutor: }\\[0.5cm]
-			{ \large \bfseries Co-Tutor: }\\[0.5cm]
+			\Large Escuela Politécnica\\[0.5cm]
+			\Large Titulación\\[2.5cm]
+			\large Trabajo Fin de Grado\\[0.5cm]
+			{ \large \bfseries Título del trabajo}\\[4.0cm]		
+   
+			{ \large Autor/a: Nombre del autor}\\[0.5cm]
+			{ \large Tutor/a: Nombre del tutor}\\[0.5cm]
+            { \large Cotutor/a: Nombre del cotutor}\\[0.5cm] %Si procede
+
 			\vfill
 			% Bottom of the page
 			{\large}
@@ -201,7 +203,7 @@
 	
 \selectlanguage{spanish}
 \pagebreak
-\pagenumbering{roman}
+\pagenumbering{arabic}
 \setcounter{page}{1}
 \tableofcontents
 %\pagebreak
